# archi

./: .gitignore  README.md  pyproject.toml
archi/: __init__.py  __main__.py  render.py  server.py  types.py
archi/export/: dxf.py  gltf.py  ifc.py  svg.py
archi/graph/: model.py  solver.py  validator.py
archi/kernel/: backend.py  furniture.py  interference.py  isolation.py  primitives.py  result.py  vector.py
archi/rules/: engine.py
archi/rules/computed/: egress.py  structural.py  ventilation.py
archi/rules/profiles/: irc_2021.yaml  schema.yaml
archi/tools/: arch.py  export.py  interior.py  query.py  render.py
tests/: test_integration.py  test_integration_plan2.py  test_integration_plan3.py  test_integration_plan4.py  test_render.py  test_render_tools.py
tests/export/: test_dxf.py  test_gltf.py  test_ifc.py  test_svg.py
tests/graph/: test_model.py  test_solver.py  test_validator.py
tests/kernel/: test_backend.py  test_furniture.py  test_interference.py  test_isolation.py  test_primitives.py  test_result.py  test_vector.py
tests/rules/: test_engine.py
tests/rules/computed/: test_egress.py  test_structural.py  test_ventilation.py
tests/tools/: test_arch.py  test_export_tools.py  test_interior.py  test_query.py
