[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archi"
version = "0.1.0"
description = "AI-native architectural and interior design MCP server"
requires-python = ">=3.11"
dependencies = [
    "cadquery-ocp>=7.7",
    "pyyaml>=6.0",
    "ortools>=9.9",
    "svgwrite>=1.4",
    "ezdxf>=1.3",
    "trimesh>=4.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
ifc = [
    "ifcopenshell>=0.7",
]

[project.scripts]
archi = "archi.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
